--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,5 +6,5 @@
 <%= link_to "新增商品", new_products_path %>
 
 <%# 預設 helper? %>
-<%#= link_to "新增商品", products_new_path %>
+<%= link_to "新增商品", new_product_path %>
 
